# command-line-rust

02-echor/: Cargo.toml
03-catr/: Cargo.toml
03-catr/src/: lib.rs  main.rs
04-headr/: Cargo.toml
04-headr/src/: lib.rs  main.rs
05-wcr/: Cargo.toml
05-wcr/src/: lib.rs  main.rs
06-uniqr/: Cargo.toml
06-uniqr/src/: lib.rs  main.rs
07-findr/: Cargo.toml
07-findr/src/: lib.rs  main.rs
07-findr/tests/: cli.rs
08-cutr/: Cargo.toml
08-cutr/src/: lib.rs  main.rs
08-cutr/tests/: cli.rs
09-grepr/: Cargo.toml
09-grepr/src/: lib.rs  main.rs
09-grepr/tests/: cli.rs
10-commr/: Cargo.toml
10-commr/src/: lib.rs  main.rs
11-tailr/: Cargo.toml
11-tailr/src/: lib.rs  main.rs
12-fortuner/: Cargo.toml
12-fortuner/src/: lib.rs  main.rs
12-fortuner/tests/: cli.rs
13-calr/: Cargo.toml
13-calr/src/: lib.rs  main.rs
13-calr/tests/: cli.rs
14-lsr/: Cargo.toml
14-lsr/src/: lib.rs  main.rs
14-lsr/tests/: cli.rs
echor/src/: main.rs
echor/tests/: cli.rs
hello/tests/: cli.rs
