[package]
name = "cutr"
version = "0.1.0"
edition = "2021"
description = "Clone of cut written in Rust that cuts out parts of files."

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
csv = "1.3.0"
regex = "1.10.6"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
