[package]
name = "grepr"
version = "0.1.0"
edition = "2021"
description = "A clone of grep written in Rust that prints each line matching a pattern."

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.10.6"
sys-info = "0.9.1"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
