[package]
name = "tailr"
version = "0.1.0"
edition = "2021"
description="A clone of tail written in Rust that prints the last 10 lines of FILE(s)."

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
regex = "1.11.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
