[package]
name = "fortuner"
version = "0.1.0"
edition = "2021"
description ="A clone of fortune written in Rust that prints short adages."

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
rand = "0.8.5"
regex = "1.11.0"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
