[package]
name = "calr"
version = "0.1.0"
edition = "2021"
description = "Clone of cal written in Rust that displays a calendar with the current date."

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.90"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
