[package]
name = "lsr"
version = "0.1.0"
edition = "2021"
description = "Clone of ls written in Rust."

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
tabular = "0.2.0"
users = "0.11.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
pretty_assertions = "1.4.1"
rand = "0.8.5"
